tree-sitter-multippl/test/corpus/exact.txt
=======================
exact: logical formulas
====================
exact {
  xs && ys
}
---

    (source_file
      (program
        (eexpr
          (eanf
            (eanfbinop
              (eanf
                (identifier))
              (bool_biop)
              (eanf
                (identifier)))))))

=======================
exact: parens and logical formulas
====================
exact {
  xs && (ys)
}
---
    (source_file
      (program
        (eexpr
          (eanf
            (eanfbinop
              (eanf
                (identifier))
              (bool_biop)
              (eanf
                (eanf
                  (identifier))))))))

======================
exact: untyped trivial
======================

exact {
  let x = true in x
}

---

    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (eexpr
              (eanf
                (evalue
                  (bool))))
            (eexpr
              (eanf
                (identifier)))))))

======================
exact: typed trivial
======================

exact {
  let x : Bool = true in
  x : Bool
}

---

(source_file
  (program (eexpr
      (elet (identifier) (ety (tyBool))
        (eexpr (eanf (evalue (bool))))
        (eexpr (eann (eexpr (eanf (identifier)))
            (ety (tyBool))))))))
======================
exact: trivial with extra annotation (not sure if types are going to the right places)
======================

exact {
  let x : Bool = true in
  (x : Bool) : Bool
}

---

(source_file (program (eexpr
      (elet (identifier) (ety (tyBool))
        (eexpr (eanf (evalue (bool))))
        (eexpr (eann (eexpr (eexpr
                     (eann (eexpr (eanf (identifier)))
                     (ety (tyBool)))))
               (ety (tyBool))))))))

======================
exact: trivial with extra product annotation
======================

exact {
  let x : Bool = true in
  (x : (Bool, Bool)) : (Bool, Bool, Bool)
}

---

(source_file (program (eexpr
      (elet (identifier) (ety (tyBool))
        (eexpr (eanf (evalue (bool))))
        (eexpr (eann (eexpr (eexpr (eann (eexpr (eanf (identifier)))
                  (ety (etyProd (ety (tyBool)) (ety (tyBool)))))))
            (ety (etyProd (ety (tyBool)) (ety (tyBool)) (ety (tyBool))))))))))
======================
exact: one typed flip
======================


exact {
  let x : Bool = flip (1.0 / 3.0)  in
  (x : Bool) : Bool
}


---



    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (ety
              (tyBool))
            (eexpr
              (eflip
                (eanf
                  (eanf
                    (eanfbinop
                      (eanf
                        (evalue
                          (float)))
                      (numeric_op)
                      (eanf
                        (evalue
                          (float))))))))
            (eexpr
              (eann
                (eexpr
                  (eexpr
                    (eann
                      (eexpr
                        (eanf
                          (identifier)))
                      (ety
                        (tyBool)))))
                (ety
                  (tyBool))))))))

======================
exact: one untyped flip
======================

exact {
  let x = flip (1/3) in
  x
}

---

    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (eexpr
              (eflip
                (eanf
                  (eanf
                    (eanfbinop
                      (eanf
                        (evalue
                          (int)))
                      (numeric_op)
                      (eanf
                        (evalue
                          (int))))))))
            (eexpr
              (eanf
                (identifier)))))))

======================
exact: one flip needs inference
======================
exact {
  let x : Bool = flip (1/3) in
  x
}
---


    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (ety
              (tyBool))
            (eexpr
              (eflip
                (eanf
                  (eanf
                    (eanfbinop
                      (eanf
                        (evalue
                          (int)))
                      (numeric_op)
                      (eanf
                        (evalue
                          (int))))))))
            (eexpr
              (eanf
                (identifier)))))))

======================
exact: two flips untyped
======================

exact {
  let x = flip 0.3333 in
  let y = flip 1/4 in
  x || y
}

---



    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (eexpr
              (eflip
                (eanf
                  (evalue
                    (float)))))
            (eexpr
              (elet
                (identifier)
                (eexpr
                  (eflip
                    (eanf
                      (eanfbinop
                        (eanf
                          (evalue
                            (int)))
                        (numeric_op)
                        (eanf
                          (evalue
                            (int)))))))
                (eexpr
                  (eanf
                    (eanfbinop
                      (eanf
                        (identifier))
                      (bool_biop)
                      (eanf
                        (identifier)))))))))))


===========================
exact: observed two flips
===========================

exact {
  let x = flip 0.3333 in
  let y = flip 1/4 in
  observe x || y in
  x
}

---

    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (eexpr
              (eflip
                (eanf
                  (evalue
                    (float)))))
            (eexpr
              (elet
                (identifier)
                (eexpr
                  (eflip
                    (eanf
                      (eanfbinop
                        (eanf
                          (evalue
                            (int)))
                        (numeric_op)
                        (eanf
                          (evalue
                            (int)))))))
                (eexpr
                  (eobserve
                    (eanf
                      (eanfbinop
                        (eanf
                          (identifier))
                        (bool_biop)
                        (eanf
                          (identifier))))
                      (eexpr
                        (eanf
                          (identifier)))))))))))

======================
exact(hybrid): observed two flips
======================

exact {
  let x = sample(~bern(1/3)) in
  let y = flip 1/4 in
  observe (x || y) in
  x
}

---


    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (eexpr
              (esample
                (sexpr
                  (ssample
                    (sexpr
                      (sanf
                        (sanfbern
                          (sanf
                            (sanfbinop
                              (sanf
                                (svalue
                                  (int)))
                              (numeric_op)
                              (sanf
                                (svalue
                                  (int))))))))))))
            (eexpr
              (elet
                (identifier)
                (eexpr
                  (eflip
                    (eanf
                      (eanfbinop
                        (eanf
                          (evalue
                            (int)))
                        (numeric_op)
                        (eanf
                          (evalue
                            (int)))))))
                (eexpr
                  (eobserve
                    (eanf
                      (eanf
                        (eanfbinop
                          (eanf
                            (identifier))
                          (bool_biop)
                          (eanf
                            (identifier)))))
                    (eexpr
                      (eanf
                        (identifier)))))))))))


======================
exact: discrete zero is invalid
======================

exact {
  discrete()
}

---

(source_file
  (program
    (eexpr
      (ediscrete
        (eanf
          (MISSING identifier))))))

======================
exact: discrete 1 arg
======================

exact {
  discrete(0.)
}

---

    (source_file
      (program
        (eexpr
          (ediscrete
            (eanf
              (evalue
                (float)))))))

======================
exact: discrete 3 arg
======================

exact {
  discrete (0., 0.2, 1.5)
}

---

    (source_file
      (program
        (eexpr
          (ediscrete
            (eanf
              (evalue
                (float)))
            (eanf
              (evalue
                (float)))
            (eanf
              (evalue
                (float)))))))

======================
exact: bounded iteration
======================

exact {
  iterate(fun, init, k)
}

---


    (source_file
      (program
        (eexpr
          (eiterate
            (identifier)
            (eanf
              (identifier))
            (eanf
              (identifier))))))

==================
exact: diamond network
==================
exact fn diamond (s1:Bool) -> Bool {
  let route = flip 0.5 in
  let s2 = if route then s1 else false in
  let s3 = if route then false else s1 in
  let drop = flip 0.0001 in
  s2 || (s3 && !drop)
}
exact {
  let net1 = diamond(true) in
  let net2 = diamond(net1) in
  diamond(net2)
}
---------
    (source_file
      (program
        (efun
          (identifier)
          (eargs
            (earg
              (identifier)
              (ety
                (tyBool))))
          (ety
            (tyBool))
          (eexpr
            (elet
              (identifier)
              (eexpr
                (eflip
                  (eanf
                    (evalue
                      (float)))))
              (eexpr
                (elet
                  (identifier)
                  (eexpr
                    (eite
                      (eanf
                        (identifier))
                      (eexpr
                        (eanf
                          (identifier)))
                      (eexpr
                        (eanf
                          (evalue
                            (bool))))))
                  (eexpr
                    (elet
                      (identifier)
                      (eexpr
                        (eite
                          (eanf
                            (identifier))
                          (eexpr
                            (eanf
                              (evalue
                                (bool))))
                          (eexpr
                            (eanf
                              (identifier)))))
                      (eexpr
                        (elet
                          (identifier)
                          (eexpr
                            (eflip
                              (eanf
                                (evalue
                                  (float)))))
                          (eexpr
                            (eanf
                              (eanfbinop
                                (eanf
                                  (identifier))
                                (bool_biop)
                                (eanf
                                  (eanf
                                    (eanfbinop
                                      (eanf
                                        (identifier))
                                      (bool_biop)
                                      (eanf
                                        (eanfunop
                                          (bool_unop)
                                          (eanf
                                            (identifier)))))))))))))))))))
        (program
          (eexpr
            (elet
              (identifier)
              (eexpr
                (eapp
                  (identifier)
                  (eanf
                    (evalue
                      (bool)))))
              (eexpr
                (elet
                  (identifier)
                  (eexpr
                    (eapp
                      (identifier)
                      (eanf
                        (identifier))))
                  (eexpr
                    (eapp
                      (identifier)
                      (eanf
                        (identifier)))))))))))

==================
exact(hybrid): arrival problem on diamond-network
==================
exact fn diamond (s1:Bool) -> Bool {
  let route = flip 0.5 in
  let s2 = if route then s1 else false in
  let s3 = if route then false else s1 in
  let drop = flip 0.0001 in
  s2 || (s3 && !drop)
}
exact {
  let p = sample(poisson(0.4)) in
  iterate(diamond, true, p)
}
---------


    (source_file
      (program
        (efun
          (identifier)
          (eargs
            (earg
              (identifier)
              (ety
                (tyBool))))
          (ety
            (tyBool))
          (eexpr
            (elet
              (identifier)
              (eexpr
                (eflip
                  (eanf
                    (evalue
                      (float)))))
              (eexpr
                (elet
                  (identifier)
                  (eexpr
                    (eite
                      (eanf
                        (identifier))
                      (eexpr
                        (eanf
                          (identifier)))
                      (eexpr
                        (eanf
                          (evalue
                            (bool))))))
                  (eexpr
                    (elet
                      (identifier)
                      (eexpr
                        (eite
                          (eanf
                            (identifier))
                          (eexpr
                            (eanf
                              (evalue
                                (bool))))
                          (eexpr
                            (eanf
                              (identifier)))))
                      (eexpr
                        (elet
                          (identifier)
                          (eexpr
                            (eflip
                              (eanf
                                (evalue
                                  (float)))))
                          (eexpr
                            (eanf
                              (eanfbinop
                                (eanf
                                  (identifier))
                                (bool_biop)
                                (eanf
                                  (eanf
                                    (eanfbinop
                                      (eanf
                                        (identifier))
                                      (bool_biop)
                                      (eanf
                                        (eanfunop
                                          (bool_unop)
                                          (eanf
                                            (identifier)))))))))))))))))))
        (program
          (eexpr
            (elet
              (identifier)
              (eexpr
                (esample
                  (sexpr
                    (sanf
                      (sanfpoisson
                        (sanf
                          (svalue
                            (float))))))))
              (eexpr
                (eiterate
                  (identifier)
                  (eanf
                    (evalue
                      (bool)))
                  (eanf
                    (identifier)))))))))

========================
exact 2x2 grid
=======================
exact {
  let x00 = flip 1.0 / 2.0 in
  let x01_10 = sample {
      x00 <- exact { x00 };
      p01 <- if  x00 then 1.0 / 3.0 else 1.0 / 4.0;
      p10 <- if !x00 then 1.0 / 5.0 else 1.0 / 6.0;
      x01 ~ bern(p01);
      x10 ~ bern(p10);
      (x01, x10)
  } in
  let x01 = x01_10[0] in
  let x10 = x01_10[1] in
  let x11 =
      if  x10  &&  x01 then flip 3.0 / 7.0 else
      if  x10  && !x01 then flip 3.0 / 8.0 else
      if !x10  &&  x01 then flip 3.0 / 9.0 else
                            flip 3.0 / 11.0 in
  (x00, x01, x10, x11)
}
---

    (source_file
      (program
        (eexpr
          (elet
            (identifier)
            (eexpr
              (eflip
                (eanf
                  (eanfbinop
                    (eanf
                      (evalue
                        (float)))
                    (numeric_op)
                    (eanf
                      (evalue
                        (float)))))))
            (eexpr
              (elet
                (identifier)
                (eexpr
                  (esample
                    (sexpr
                      (slet
                        (identifier)
                        (sexpr
                          (sexact
                            (eexpr
                              (eanf
                                (identifier)))))
                        (sexpr
                          (slet
                            (identifier)
                            (sexpr
                              (site
                                (sanf
                                  (identifier))
                                (sexpr
                                  (sanf
                                    (sanfbinop
                                      (sanf
                                        (svalue
                                          (float)))
                                      (numeric_op)
                                      (sanf
                                        (svalue
                                          (float))))))
                                (sexpr
                                  (sanf
                                    (sanfbinop
                                      (sanf
                                        (svalue
                                          (float)))
                                      (numeric_op)
                                      (sanf
                                        (svalue
                                          (float))))))))
                            (sexpr
                              (slet
                                (identifier)
                                (sexpr
                                  (site
                                    (sanf
                                      (sanfunop
                                        (bool_unop)
                                        (sanf
                                          (identifier))))
                                    (sexpr
                                      (sanf
                                        (sanfbinop
                                          (sanf
                                            (svalue
                                              (float)))
                                          (numeric_op)
                                          (sanf
                                            (svalue
                                              (float))))))
                                    (sexpr
                                      (sanf
                                        (sanfbinop
                                          (sanf
                                            (svalue
                                              (float)))
                                          (numeric_op)
                                          (sanf
                                            (svalue
                                              (float))))))))
                                (sexpr
                                  (sletsample
                                    (identifier)
                                    (sexpr
                                      (sanf
                                        (sanfbern
                                          (sanf
                                            (identifier)))))
                                    (sexpr
                                      (sletsample
                                        (identifier)
                                        (sexpr
                                          (sanf
                                            (sanfbern
                                              (sanf
                                                (identifier)))))
                                        (sexpr
                                          (sanf
                                            (sanfprod
                                              (sanf
                                                (identifier))
                                              (sanf
                                                (identifier)))))))))))))))))
                (eexpr
                  (elet
                    (identifier)
                    (eexpr
                      (eanf
                        (eanfprj
                          (identifier)
                          (eanf
                            (evalue
                              (int))))))
                    (eexpr
                      (elet
                        (identifier)
                        (eexpr
                          (eanf
                            (eanfprj
                              (identifier)
                              (eanf
                                (evalue
                                  (int))))))
                        (eexpr
                          (elet
                            (identifier)
                            (eexpr
                              (eite
                                (eanf
                                  (eanfbinop
                                    (eanf
                                      (identifier))
                                    (bool_biop)
                                    (eanf
                                      (identifier))))
                                (eexpr
                                  (eflip
                                    (eanf
                                      (eanfbinop
                                        (eanf
                                          (evalue
                                            (float)))
                                        (numeric_op)
                                        (eanf
                                          (evalue
                                            (float)))))))
                                (eexpr
                                  (eite
                                    (eanf
                                      (eanfbinop
                                        (eanf
                                          (identifier))
                                        (bool_biop)
                                        (eanf
                                          (eanfunop
                                            (bool_unop)
                                            (eanf
                                              (identifier))))))
                                    (eexpr
                                      (eflip
                                        (eanf
                                          (eanfbinop
                                            (eanf
                                              (evalue
                                                (float)))
                                            (numeric_op)
                                            (eanf
                                              (evalue
                                                (float)))))))
                                    (eexpr
                                      (eite
                                        (eanf
                                          (eanfbinop
                                            (eanf
                                              (eanfunop
                                                (bool_unop)
                                                (eanf
                                                  (identifier))))
                                            (bool_biop)
                                            (eanf
                                              (identifier))))
                                        (eexpr
                                          (eflip
                                            (eanf
                                              (eanfbinop
                                                (eanf
                                                  (evalue
                                                    (float)))
                                                (numeric_op)
                                                (eanf
                                                  (evalue
                                                    (float)))))))
                                        (eexpr
                                          (eflip
                                            (eanf
                                              (eanfbinop
                                                (eanf
                                                  (evalue
                                                    (float)))
                                                (numeric_op)
                                                (eanf
                                                  (evalue
                                                    (float)))))))))))))
                            (eexpr
                              (eanf
                                (eanfprod
                                  (eanf
                                    (identifier))
                                  (eanf
                                    (identifier))
                                  (eanf
                                    (identifier))
                                  (eanf
                                    (identifier)))))))))))))))))

===========================================
exact can have mixed tuples
===========================================

exact {
    (0, p, 1)
}
---
    (source_file
      (program
        (eexpr
          (eanf
            (eanfprod
              (eanf
                (evalue
                  (int)))
              (eanf
                (identifier))
              (eanf
                (evalue
                  (int))))))))



===========================================
exact can call iterate with mixed tuple arguments
===========================================

exact {
    iterate(foo, (0, p, 1), 10)
}
---
    (source_file
      (program
        (eexpr
          (eiterate
            (identifier)
            (eanf
              (eanfprod
                (eanf
                  (evalue
                    (int)))
                (eanf
                  (identifier))
                (eanf
                  (evalue
                    (int)))))
            (eanf
              (evalue
                (int)))))))


================================
exact can handle dice ints (just ignore the size)
================================
exact {
  int(3, 1)
}
------------------------
    (source_file
      (program
        (eexpr
          (eanf
            (evalue
              (sizedint
                (int)
                (int)))))))

================================
exact can handle dice ints x2
================================
exact {
  // simulate dataset with d=3, n=5, p=0.75, with integers instead of bools
  let x0_0_bool = flip 0.75 in
  let x0_0 = if x0_0_bool then int(3, 1) else int(3, 0) in
  let xor0_1 = flip 0.75 in let x0_1 = if x0_0_bool ^ xor0_1 then int(3, 1) else int(3, 0) in
  x
}
------------------------
